--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet"href="./css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 340px)" href="./css/smallscreen.css">
     <title>Portfólio | Bryan Rassweiler</title>
 </head>
 <body>
     <header>
         <br><br><br>
         <h1 class="title"> PORTFÓLIO </h1>
-        <div id="a"> </div>
+        <div class="a"> </div>
         <h3 class="title"> Bryan Rassweiler</h3>
         <nav>
                 <a id="active" class="link" href="index.html"> Início </a>
@@ -22,18 +23,29 @@
             <a class="link" href="sobre.html"> Sobre </a>
         </nav>
     </header>
-    <div id="github">
-        <strong id="githubMtxt">GitHub</strong>
-        <p> Clique <a class="linkcard" href="https://github.com/BryanRSW20"> aqui </a></p> 
+    <div id="cardIndex">
+        <strong id="cardIndexTxt">GitHub</strong>
+        <div class="textoCard"> <p> Clique <a class="linkcard" href="https://github.com/BryanRSW20"> aqui </a></p>  </div>
+        
+        <br>
+        <br>
+        <br>
+        <div class="texto-lateral">HTTPS://GITHUB.COM/ </div>
     <div id="img"></div>
     </div>  
-</div>
 
-<div id="linkedin">
-    <strong id="linkedMtxt">LinkedIn</strong>
-    <p> Clique <a class="linkcard" href="https://www.linkedin.com/in/bryan-rassweiler/"> aqui </a></p> 
+<div id="cardIndex">
+    <strong id="cardIndexTxt">LinkedIn</strong>
+    <div class="textoCard"> <p> Clique <a class="linkcard" href="https://www.linkedin.com/in/bryan-rassweiler/"> aqui </a></p> </div> 
+    <br>
+    <br>
+    <br>
+    <div class="texto-lateral">HTTPS://LINKEDIN.COM/</div>
 <div id="img1"></div>
-
-
+</div>
+<footer>
+    Criado em 2022. <br>
+    Acompanhe o projeto no GitHub em <a href="https://github.com/BryanRSW20/Portfolio2022"> https://github.com/BryanRSW20/Portfolio2022 </a>
+</footer>
 </body>
 </html>
