--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 340px)" href="./css/smallscreen.css">
     <title> Selecione o Portfólio | Bryan Rassweiler </title>
 </head>
 <body>
     <header>
         <br><br><br>
         <h1 class="title"> PORTFÓLIO </h1>
-        <div id="a"> </div>
+        <div class="a"> </div>
         <h3 class="title"> Bryan Rassweiler </h3>
         <nav>
                 <a class="link" href="index.html"> Início </a>
@@ -23,8 +24,30 @@
         </nav>
     </header>
     <br><br>
+    <div class="materias">
     <section class="section1">
         <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/13tnUK4_oJl6yfwoMWQaSPI0KXRyE7YfH">Ciências Humanas</a></h2>
     </section>
+    <section class="section2">
+        <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/1IhOkIPRKL1EtoFMrfXSEnts9gywZ4TLq">Ciências da Natureza</a></h2>
+    </section>
+    <section class="section3">
+        <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/1IvRxvoL19ccdaqqNNwr1aEggHIHBa6yX">Linguagens</a></h2>
+    </section>
+    <section class="section4">
+        <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/1IwV-GgEJ6_-zoIiTvCqTHkst2-Saa4GG">Matemática</a></h2>
+    </section>
+    <section class="section5">
+        <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/15jTxJUyehqyOmbw2kAFIC-XAOpIq_I9Y">Módulo Integrador</a></h2>
+    </section>
+
+    <section class="section6">
+        <h2 id="titleS"> <a href="https://drive.google.com/drive/u/1/folders/1Ctz7svf4967hMPutBdGSeiRuwgd_5dak" class="linkcard"> Atividades Escolhidas  </a> </h2>
+    </section>
+
+    <section class="section7">
+        <h2 id="titleS"> <a href="https://drive.google.com/drive/u/1/folders/1et7Z6lg__88m0rNNdb20SBnIijh7RaV5" class="linkcard"> Boletim </a> </h2>
+    </section>
+</div>
 </body>
 </html>
