--- a/sobre.html
+++ b/sobre.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 340px)" href="./css/smallscreen.css">
-    <title> Sobre| Bryan Rassweiler </title>
+    <title> Sobre | Bryan Rassweiler </title>
     <!DOCTYPE html>
     <html lang="en">
 </head>
-<body class="bodyplaceholder">
+<body>
     <header>
         <br><br><br>
         <h1 class="title"> PORTFÓLIO </h1>
@@ -23,7 +23,11 @@
             <a id="active" class="link" href="sobre.html"> Sobre </a>
         </nav>
     </header>
-    <h1> Volte mais tarde! </h1>
-    <h2>Não terminei essa parte ainda!</h2>
+    <main class="main">
+    <h1> Sobre Mim </h1>
+    <div class="sobre-mim">
+    <p>Meu nome é Bryan Rassweiler, tenho 18 anos e resido na cidade de Florianópolis em Santa Catarina, atualmente estou finalizando o 3º Ano do Ensino Médio, que é integrado a um Curso de Desenvolvimento de Sistemas, tenho interesse em trabalhar com Desenvolvimento Web, pois é algo que mexe tanto com criatividade para criar o front-end, tanto com lógica para trabalhar no back-end, tenho experiência com HTML, CSS, JS, Java, SQL e estou planejando estudar Angular e React em um futuro próximo.</p>
+    </div>
+    </main>
 </body>
 </html>
