--- a/portfolio.html
+++ b/portfolio.html
@@ -25,27 +25,27 @@
     </header>
     <br><br>
     <div class="materias">
-    <section class="section1">
+    <section class="section">
         <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/13tnUK4_oJl6yfwoMWQaSPI0KXRyE7YfH">Ciências Humanas</a></h2>
     </section>
-    <section class="section2">
+    <section class="section">
         <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/1IhOkIPRKL1EtoFMrfXSEnts9gywZ4TLq">Ciências da Natureza</a></h2>
     </section>
-    <section class="section3">
+    <section class="section">
         <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/1IvRxvoL19ccdaqqNNwr1aEggHIHBa6yX">Linguagens</a></h2>
     </section>
-    <section class="section4">
+    <section class="section">
         <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/1IwV-GgEJ6_-zoIiTvCqTHkst2-Saa4GG">Matemática</a></h2>
     </section>
-    <section class="section5">
+    <section class="section">
         <h2 id="titleS"> <a class="linkcard" href="https://drive.google.com/drive/u/1/folders/15jTxJUyehqyOmbw2kAFIC-XAOpIq_I9Y">Módulo Integrador</a></h2>
     </section>
 
-    <section class="section6">
+    <section class="section">
         <h2 id="titleS"> <a href="https://drive.google.com/drive/u/1/folders/1Ctz7svf4967hMPutBdGSeiRuwgd_5dak" class="linkcard"> Atividades Escolhidas  </a> </h2>
     </section>
 
-    <section class="section7">
+    <section class="section">
         <h2 id="titleS"> <a href="https://drive.google.com/drive/u/1/folders/1et7Z6lg__88m0rNNdb20SBnIijh7RaV5" class="linkcard"> Boletim </a> </h2>
     </section>
 </div>
