--- a/sobre.html
+++ b/sobre.html
@@ -28,6 +28,71 @@
     <div class="sobre-mim">
     <p>Meu nome é Bryan Rassweiler, tenho 18 anos e resido na cidade de Florianópolis em Santa Catarina, atualmente estou finalizando o 3º Ano do Ensino Médio, que é integrado a um Curso de Desenvolvimento de Sistemas, tenho interesse em trabalhar com Desenvolvimento Web, pois é algo que mexe tanto com criatividade para criar o front-end, tanto com lógica para trabalhar no back-end, tenho experiência com HTML, CSS, JS, Java, SQL e estou planejando estudar Angular e React em um futuro próximo.</p>
     </div>
+
+    <h1> Rotina Semanal </h1>
+
+    <table>
+       <tr>
+        <th>Horário</th>
+        <th>Segunda</th>
+        <th>Terça</th>
+        <th> Quarta </th>
+        <th> Quinta </th>
+        <th> Sexta </th>
+       </tr>
+        <tr>
+            <td>7:40</td>
+            <td>Início da Aula</td>
+            <td>Início da Aula</td>
+            <td>Início da Aula</td>
+            <td>Início da Aula</td>
+            <td>Início da Aula</td>
+        </tr>
+        <tr>
+            <td>13:00</td>
+            <td>Fim da Aula</td>
+            <td>Fim da Aula</td>
+            <td>Fim da Aula</td>
+            <td>Fim da Aula</td>
+            <td>Fim da Aula</td>
+        </tr>
+        <tr>
+            <td>14:00</td>
+            <td>Tarefas da casa</td>
+            <td>Tarefas da casa</td>
+            <td>Tarefas da casa</td>
+            <td>Tarefas da casa</td>
+            <td>Tarefas da casa</td>
+        </tr> 
+        <tr>
+            <td> 15:00 </td>
+            <td> Tarefas da aula </td>
+            <td> Tarefas da aula </td>
+            <td> Tarefas da aula </td>
+            <td> Tarefas da aula </td>
+            <td> Tarefas da aula </td>
+        </tr>
+        <tr>
+            <td>17:00</td>
+            <td> Lazer </td>
+            <td> Lazer </td>
+            <td> Lazer </td>
+            <td> Lazer </td>
+            <td> Lazer </td>
+        </tr>
+        <tr>
+            <td> 21:00 </td>
+            <td> Sono </td>
+            <td> Sono </td>
+            <td> Sono </td>
+            <td> Sono </td>
+            <td> Sono </td>
+        </tr>
+    </table>
+
+    <h1> Currículo </h1>
+
+    <a href="https://docs.google.com/document/d/1SUyLYBEmbILAePkh5_1zoDtTo_8goq5k0DSPIfOiBTk/edit?usp=sharing"> Aqui </a>
     </main>
 </body>
 </html>
