--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header id="header" class="header">
+            <button class="responsive" id="theme-toggle"> <i class="fa-regular fa-lightbulb"></i> </button>
         <div class="titles">
             <h1> Portfólio </h1>
         </div>
