--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <li> <a href="#contato"> <i class="fa fa-envelope"></i> Contato </a> </li>
             </ul>
         </div>
-        <div class="dark-mode">
-                <li><button id="theme-toggle"> <i class="fa-regular fa-lightbulb"></i></button></li>
-        </div>
+        <!-- <div class="dark-mode">
+                <li><button class="responsive" id="theme-toggle"> <i class="fa-regular fa-lightbulb"></i></button></li>
+        </div> -->
     </header>
     <main>
         <div class="return-to-top"> 
